--- a/switching_reg.ipynb
+++ b/switching_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -59,23 +59,23 @@
      "text": [
       "                          SwitchingRegression Results                          \n",
       "===============================================================================\n",
-      "Dep. Variable:                       y   Log-Likelihood:                -1374.2\n",
-      "Model:             SwitchingRegression   AIC:                             2752.\n",
-      "Method:             Maximum Likelihood   BIC:                             2762.\n",
+      "Dep. Variable:                       y   Log-Likelihood:                -1255.8\n",
+      "Model:             SwitchingRegression   AIC:                             2516.\n",
+      "Method:             Maximum Likelihood   BIC:                             2525.\n",
       "Date:                 Sat, 27 Apr 2019                                         \n",
-      "Time:                         11:37:08                                         \n",
+      "Time:                         13:14:46                                         \n",
       "No. Observations:                 1000                                         \n",
       "Df Residuals:                      998                                         \n",
       "Df Model:                            1                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const0         0.7984      0.459      1.739      0.082      -0.101       1.698\n",
-      "x10           -2.3848      0.077    -31.098      0.000      -2.535      -2.234\n",
-      "sigma0         3.5233      0.117     30.208      0.000       3.295       3.752\n",
-      "const1         1.3098      0.092     14.199      0.000       1.129       1.491\n",
-      "x11            4.0556      0.015    270.510      0.000       4.026       4.085\n",
-      "sigma1         1.0252      0.028     36.625      0.000       0.970       1.080\n",
+      "const0        -3.7657        nan        nan        nan         nan         nan\n",
+      "x10           -1.4978        nan        nan        nan         nan         nan\n",
+      "sigma0         5.7608        nan        nan        nan         nan         nan\n",
+      "const1         1.8951        nan        nan        nan         nan         nan\n",
+      "x11            4.0215        nan        nan        nan         nan         nan\n",
+      "sigma1         1.1454        nan        nan        nan         nan         nan\n",
       "==============================================================================\n"
      ]
     }
@@ -136,6 +136,10 @@
     "        weights =[]\n",
     "        for comp in range(self.ncomp):\n",
     "            comp_params = params[comp*(k+1): (comp+1)*(k + 1)]\n",
+    "            beta, sigma = comp_params[:-1]\n",
+    "             = comp_params[-1]\n",
+    "            \n",
+    "            comp_params = params[comp*(k+1): (comp+1)*(k + 1)]\n",
     "            beta = comp_params[:-1]\n",
     "            sigma = comp_params[-1]\n",
     "              \n",
@@ -173,10 +177,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'VENDOR', u'WW', u'WC', u'LFW', u'LFC', u'WIN', u'SYSTEM', u'YEAR',\n",
+      "       u'MONTH', u'DAY', u'FMOZONE', u'ESC', u'COOLER', u'QLFC', u'QLFW',\n",
+      "       u'QWW', u'QWC', u'ESTQTY', u'DEL', u'MILES', u'NUMSCHL', u'NUMWIN',\n",
+      "       u'POPUL', u'ADJPOP', u'NUM', u'GAS', u'FMO', u'INC'],\n",
+      "      dtype='object')\n",
+      "                          SwitchingRegression Results                          \n",
+      "===============================================================================\n",
+      "Dep. Variable:                      WW   Log-Likelihood:                 7580.3\n",
+      "Model:             SwitchingRegression   AIC:                        -1.515e+04\n",
+      "Method:             Maximum Likelihood   BIC:                        -1.514e+04\n",
+      "Date:                 Sat, 27 Apr 2019                                         \n",
+      "Time:                         13:14:51                                         \n",
+      "No. Observations:                 4042                                         \n",
+      "Df Residuals:                     4039                                         \n",
+      "Df Model:                            2                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const0        -1.9274        nan        nan        nan         nan         nan\n",
+      "FMO0           0.0533        nan        nan        nan         nan         nan\n",
+      "INC0          -0.0063        nan        nan        nan         nan         nan\n",
+      "sigma0         0.0817        nan        nan        nan         nan         nan\n",
+      "const1         3.6154        nan        nan        nan         nan         nan\n",
+      "FMO1          -0.7590        nan        nan        nan         nan         nan\n",
+      "INC1          -2.2449        nan        nan        nan         nan         nan\n",
+      "sigma1         5.6034        nan        nan        nan         nan         nan\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/milk.csv')\n",
+    "print data.columns\n",
+    "\n",
+    "reg1 = sm.add_constant(data[['WW','FMO','INC']]).dropna()\n",
+    "reg1 = reg1[reg1['WW']<.4]\n",
+    "reg1[['WW','FMO']] = np.log(reg1[['WW','FMO']])\n",
+    "\n",
+    "\n",
+    "model = SwitchingRegression(reg1['WW'],reg1[['const','FMO','INC']])\n",
+    "result = model.fit()\n",
+    "print result.summary()"
+   ]
   },
   {
    "cell_type": "code",
