added OLS results

--- a/analytic_solution.ipynb
+++ b/analytic_solution.ipynb
@@ -48,34 +48,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 2])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1,2])[[1,0,1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.41923911  5.27416605 -3.0554598   3.09273167]\n",
-      " [ 0.58076089  2.98164905  3.88695089  2.90872784]]\n",
+      "[[ 0.40964911  5.75562117 -3.08604976  2.97988644]\n",
+      " [ 0.59035089  1.55075102  4.0188137   2.71894873]]\n",
       "----\n",
-      "[[0.13593678 0.08117191 0.00246764]\n",
-      " [0.13593678 0.05639045 0.00175354]]\n"
+      "[[0.12250049 0.08319029 0.00257814]\n",
+      " [0.12250049 0.05596236 0.00152697]]\n"
      ]
     }
    ],
@@ -167,17 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.96667375e-01 -5.43102372e+00  1.42570827e+00  3.76729812e-02\n",
-      "  -9.32507833e-02  1.36412006e-02]\n",
-      " [ 7.03332625e-01 -2.22353754e+00  1.53568489e-01  3.16081267e-03\n",
-      "   1.60746262e-02  8.75054154e-02]]\n"
+      "[[ 2.92314996e-01 -5.65847508e+00  1.42371520e+00  2.34242118e-02\n",
+      "  -8.47684998e-02  1.29560714e-02]\n",
+      " [ 7.07685004e-01 -2.02277657e+00  1.65106915e-01 -2.23316010e-02\n",
+      "   3.38890713e-03  8.77220414e-02]]\n",
+      "-----\n",
+      "[[1.63157016e-01 7.28920778e-04 7.89128400e-05 1.43088063e-06\n",
+      "  2.90470678e-06]\n",
+      " [1.63157016e-01 1.04593319e-02 1.07892260e-03 2.46943010e-05\n",
+      "  3.49345995e-05]]\n",
+      "\n"
      ]
     }
    ],
@@ -188,13 +174,16 @@
     "reg1 = sm.add_constant(reg1)\n",
     "reg1[['WW','FMO','QSTOP','DEL']] = np.log(reg1[['WW','FMO','QSTOP','DEL']])\n",
     "\n",
-    "est = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','INC','DEL']]),2)\n",
-    "print est[0]"
+    "est = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','DEL']]),2)\n",
+    "print est[0]\n",
+    "print '-----'\n",
+    "print est[1]\n",
+    "print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,11 +251,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_table('prelim_results.tex', est, labels=('WW',['const','FMO','INC','COOLER']))"
+    "write_table('results/prelim_results.tex', est, labels=('WW',['const','FMO','QSTOP','DEL']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.00000000e+00 -2.76235511e+00  4.13934513e-01 -1.32301552e-02\n",
+      "  -1.74214796e-04  9.79755345e-02]]\n",
+      "-----\n",
+      "[[0.00000000e+00 9.78463856e-03 1.01459100e-03 2.23149535e-05\n",
+      "  3.37867128e-05]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "est1 = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','DEL']]),1)\n",
+    "print est1[0]\n",
+    "print '-----'\n",
+    "print est1[1]\n",
+    "print\n",
+    "write_table('results/ols_results.tex', est, labels=('WW',['const','FMO','QSTOP','DEL']))"
    ]
   },
   {
